--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   ],
   "license": "Apache-2.0",
   "dependencies": {
-    "di": "git+https://github.com/RackHD/di.js.git",
+    "di": "git+https://github.com/RackHD/di.js.git#release/1.2.0-branch",
     "lodash": "^2.4.1",
     "tftp": "^0.1.2",
-    "on-core": "git+https://github.com/RackHD/on-core.git"
+    "on-core": "git+https://github.com/RackHD/on-core.git#release/1.2.0-branch"
   },
   "devDependencies": {
     "chai": "^2.0.0",
